# python-flask-backend

./: .env  README.md  README1.md  README2.md  README3.md  flask_sqlalchemy_migrate.md  pyproject.toml
src/flask_backend/: app.py  db.py
src/flask_backend/controllers/web/: __init__.py  data_store.py  user.py
src/flask_backend/migrations/versions/: 67a93847ea9a_initial_migration.py  ce461913ad3e_add_address_to_user.py
src/flask_backend/models/: __init__.py  data_store.py  user.py
src/flask_backend/resources/: user.py
