[project]
name = "flask-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Ljt",email = "liujiangtao.ljt@alibaba-inc.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "flask-restful (>=0.3.10,<0.4.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "flask_backend", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.flask_backend.app:app"  # 替换为你的入口函数

